Adding of image

--- a/200.html
+++ b/200.html
@@ -32,4 +32,7 @@
   
   <p id="anotherDemo">This text will never be displayed because it is overwritten by scripts.js</p>
   <script src="assets/scripts.js"></script>
+
+  <img src="rect512.svg" alt="Italian Trulli" width="20%" height="20%">
+
 </html>
